--- a/WooCommerce/Resources/tr.lproj/Localizable.strings
+++ b/WooCommerce/Resources/tr.lproj/Localizable.strings
@@ -213,6 +213,21 @@
 /* Label for button to log in using your site address. The underscores _..._ denote underline */
 "Don't have an account? _Sign up_" = "Hesabınız yok mu? _Kaydol_";
 
+/* WordPress.com (unmapped!) error */
+"Dotcom Error: [(code)] (theMessage)" = "Dotcom Error: [(code)] (theMessage)";
+
+/* WordPress.com Missing Token */
+"Dotcom Missing Token" = "Dotcom Missing Token";
+
+/* WordPress.com Request Failure */
+"Dotcom Request Failed" = "Dotcom Request Failed";
+
+/* WordPress.com Error thrown when the response body is empty */
+"Dotcom Response Empty" = "Dotcom Response Empty";
+
+/* WordPress.com Invalid Token */
+"Dotcom Token Invalid" = "Dotcom Token Invalid";
+
 /* Voiceover accessibility hint informing the user they can double tap a modal alert to dismiss it */
 "Double tap to dismiss" = "Kapatmak için çift dokunun";
 
@@ -297,9 +312,6 @@
 /* Message shown on screen after the Google sign up process failed. */
 "Google sign up failed." = "Google oturum açma başarısız oldu.";
 
-/* My Store > Settings > Privacy settings section */
-"HELP IMPROVE THE APP" = "UYGULAMAYI İYİLEŞTİRMEMİZE YARDIMCI OLUN";
-
 /* My Store > Settings > Help & Support section title */
 "HOW CAN WE HELP?" = "NASIL YARDIMCI OLABİLİRİZ?";
 
@@ -309,6 +321,9 @@
 /* Contact Support Action */
 "Help & Support" = "Yardım ve Destek";
 
+/* My Store > Settings > Privacy settings section */
+"Help Improve The App" = "Help Improve The App";
+
 /* Footer text to hide the billing cell */
 "Hide billing" = "Faturayı saklayın";
 
@@ -316,7 +331,7 @@
 "Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "Hımm, bu URL’de bir WordPress sitesi varmış gibi görünmüyor. Yazımı tekrar kontrol edip yeniden deneyin.";
 
 /* Detail label for yes/no switch. */
-"If disabled will add the note as private." = "Etkinlik dışı bırakılırsa, not özel olarak eklenir.";
+"If disabled the note will be private" = "If disabled the note will be private";
 
 /* Application's Inactive State */
 "Inactive" = "Inactive";
@@ -477,7 +492,7 @@
 /* Text displayed when no data is available for revenue chart. */
 "No data available" = "Veri bulunmuyor";
 
-/* Orders List (Empty State + Filters) */
+/* No comment provided by engineer. */
 "No results for the selected criteria" = "Seçilen kriter için sonuç yok";
 
 /* No comment provided by engineer. */
@@ -513,6 +528,9 @@
 /* Title of a button. The text should be capitalized.  Clicking opens the mail app in the user's iOS device. */
 "Open Mail" = "Postayı Aç";
 
+/* Opens iOS's Device Settings for the app */
+"Open device settings" = "Open device settings";
+
 /* Navigates to open source licenses screen */
 "Open source licenses" = "Open source licenses";
 
@@ -534,8 +552,8 @@
 /* Orders Title */
 "Orders: (filter)" = "Siparişler: (filtre)";
 
-/* My Store > Settings > Primary Store information section */
-"PRIMARY STORE" = "BİRİNCİL MAĞAZA";
+/* My Store > Settings > Other app section */
+"Other" = "Other";
 
 /* Product section title */
 "PRODUCT" = "ÜRÜN";
@@ -585,6 +603,9 @@
 /* Message to ask the user to check their email and look for a WordPress.com email. */
 "Please open your email app and look for an email from WordPress.com." = "Lütfen e-posta uygulamanızı açın ve WordPress.com’dan gelen e-postayı arayın.";
 
+/* My Store > Settings > Primary Store information section */
+"Primary Store" = "Primary Store";
+
 /* Opens the Privacy Policy web page */
 "Privacy Policy" = "Privacy Policy";
 
@@ -627,7 +648,7 @@
 /* Describes a domain that was registered with WordPress.com */
 "Registered Domain" = "Kayıtlı alan adı";
 
-/* Action: Opens the Store in a browser */
+/* No comment provided by engineer. */
 "Remove Filters" = "Filtreleri Kaldır";
 
 /* Settings > Privacy Settings > report crashes section. Label for the `Report crashes` toggle. */
@@ -635,6 +656,9 @@
 
 /* No comment provided by engineer. */
 "Retry" = "Tekrar";
+
+/* Revenue stat label on dashboard. */
+"Revenue" = "Revenue";
 
 /* Review moderation success notice message */
 "Review marked %@" = "Review marked %@";
@@ -950,6 +974,9 @@
 
 /* User role badge */
 "Viewer" = "İzleyici";
+
+/* Visitors stat label on dashboard - should be plural. */
+"Visitors" = "Visitors";
 
 /* Add a note screen - Write Note section title */
 "WRITE NOTE" = "NOT YAZIN";
